--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+$background-page-color:#F2F2F2;
+$button-primary: #00d084;
+
+body {
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--background-page-color);
+}
+
+html {
+  font-size: 16px;
+}
+
+.main-container {
+  max-width: 1440px;
+  margin: auto;
+}
+
+.button-primary {
+  background-color: $button-primary;
+  color: white;
+  border-radius: .5rem;
+  margin: .5rem;
+  padding: .5rem;
+  border-color: rgba(144, 238, 144, 0.315);
+  cursor: pointer;
+}
